--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 .mainHeader span { /*we add this span element to make the background color wrap around only on the text (inline element)*/
     background-color: #BD799C;
     padding: 10px 10px 10px 10px;
-    border-radius: 10px 30px 10px; /* rounds of corners, top L --> top R & bot L --> bot R
+    border-radius: 10px 30px 10px; /* rounds of corners, top L --> top R & bot L --> bot R */
 }
 
 /* if outer display type: inline - this means box will NOT break into new line
@@ -38,6 +38,7 @@
     margin-right: auto;
     border-radius: 10cm;
 }
+
 
 a {
     font-size: 40px;
